Curral Digital - Versão para apresentação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,12 @@
             <ion-icon id="icon" src="assets/icon/cow.svg"></ion-icon>
             <ion-label>Lista de Fêmeas</ion-label>
           </ion-item>
+
+          <ion-item button routerLink="/main/info">
+            <ion-icon id="icon" name="information"></ion-icon>
+            <ion-label>Sobre</ion-label>
+          </ion-item>
+
           <ion-item button (click)="logout()">
             <ion-icon id="icon" name="exit"></ion-icon>
             <ion-label>Sair</ion-label>
