--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
         <h1 class="ion-text-center">Bem-vindo ao Curral Digital</h1>
 
         <h1 class="ion-text-center">
-          Acompanhe a evolução dos seus animais e melhore sua produção
+          Acompanhe a evolução dos seus animais e melhore sua produção.
         </h1>
 
         <button id="start" (click)="button()">
