Update no Info - 06/02

--- a/src/app/main/info/info.page.html
+++ b/src/app/main/info/info.page.html
@@ -5,11 +5,13 @@
         <h1 class="ion-text-center">
           <ion-icon src="assets/icon/cerca.svg"></ion-icon>
         </h1>
+        <h1 class="ion-text-center">Curral Digital</h1>
+        <p class="ion-text-center">Versão 0.0.1</p>
 
         <h1 class="ion-text-center">Desenvolvedoras</h1>
 
         <p class="ion-text-center">
-          Profª Alessandra Maranhão Sivini Soares Siqueira
+          Larissa da Silva Brito
         </p>
         <p class="ion-text-center">
           Luana Vitória da Silva Brito
