--- a/src/app/main/morto/morto.page.html
+++ b/src/app/main/morto/morto.page.html
@@ -41,7 +41,7 @@
     </ng-container>
     <ng-template #noMontas>
       <ion-item lines="none" class="ion-padding"
-        >Insira a data em que a monta/inseminação artificial bem sucedida foi realizada</ion-item
+        >Insira a data em que a monta/inseminação artificial foi realizada</ion-item
       >
     </ng-template>
   </ion-list>
