--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,10 +31,7 @@
             <ion-label>Sobre</ion-label>
           </ion-item>
 
-          <ion-item button (click)="logout()">
-            <ion-icon id="icon" name="exit"></ion-icon>
-            <ion-label>Sair</ion-label>
-          </ion-item>
+          <app-logout-button menu="main-menu"></app-logout-button>
         </ion-list>
       </ion-menu-toggle>
     </ion-content>
